[package]
name = "voxxy"
version = "0.1.0"
edition = "2021"
categories = ["game-engines"]
description = "A voxel engine experiment"
homepage = "https://luizdepra.dev"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luizdepra/voxxy"
rust-version = "1.74.0"

[dependencies]
