[package]
name = "voxxy"
version = "0.1.0"
edition = "2021"
categories = ["game-engines"]
description = "A voxel engine experiment"
homepage = "https://luizdepra.dev"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luizdepra/voxxy"
rust-version = "1.74.0"

[dependencies]
bevy = "0.12"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
